--- a/HTML/1/TablePrac.html
+++ b/HTML/1/TablePrac.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    table{
+        text-align: center;
+    }
+    td,th{
+        padding:10px 20px;
+    }
+</style>
 <body>
     <h2><u>Table 1</u></h2>
     <table border="1">
@@ -28,7 +36,7 @@
                 <td>Male</td>
                 <td>18</td>
             </tr>
-
+            
             <tr>
                 <td>103</td>
                 <td>Shreya</td>
@@ -43,5 +51,73 @@
         </tbody>
     </table>
     
+    <h2><u>Time Table</u></h2>
+    <table border="1">
+        <thead>
+            <th colspan="8">Time Table</th>
+        </thead>
+        <tbody>
+            <tr>
+                <td rowspan="7">Hour</td>
+                <td>Mon</td>
+                <td>Tue</td>
+                <td>Wed</td>
+                <td>Thu</td>
+                <td>Fri</td>
+                <td>Sat</td>
+                <td>Sun</td>
+            </tr>
+            <tr>
+                <td>Science</td>
+                <td>Maths</td>
+                <td>English</td>
+                <td>Social Sciene</td>
+                <td>Art</td>
+                <td>Hindi</td>
+                <td>Sankrit</td>
+            </tr>
+            <tr>
+                <td>Science</td>
+                <td>Maths</td>
+                <td>English</td>
+                <td>Social Sciene</td>
+                <td>Art</td>
+                <td>Hindi</td>
+                <td>Sankrit</td>
+            </tr>
+            <tr>
+                <td colspan="7">LUNCH</td>
+            </tr>
+            <tr>
+                <td>Science</td>
+                <td>Maths</td>
+                <td>English</td>
+                <td>Social Sciene</td>
+                <td>Art</td>
+                <td>Hindi</td>
+                <td>Sankrit</td>
+            </tr>
+            <tr>
+                <td>Science</td>
+                <td>Maths</td>
+                <td>English</td>
+                <td>Social Sciene</td>
+                <td>Art</td>
+                <td>Hindi</td>
+                <td>Sankrit</td>
+            </tr>
+            <tr>
+                <td>Science</td>
+                <td>Maths</td>
+                <td>English</td>
+                <td>Social Sciene</td>
+                <td>Art</td>
+                <td>Hindi</td>
+                <td>Sankrit</td>
+            </tr>
+        </tbody>
+
+    </table>
+
 </body>
 </html>
